fix: add scrolling functionality of overflow message

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,3 +8,8 @@ em {
   font-style: italic;
   color: cornflowerblue;
 }
+
+#messages {
+  height: 15em;
+  overflow: auto;
+}
